fix tooltip flickering adding more tabs on recipe removed `ForMember` where the name is the same in both types

--- a/Pages/Recipe.razor.css
+++ b/Pages/Recipe.razor.css
@@ -21,3 +21,13 @@
 .recipe-tabs.nav.nav-tabs {
     border-color: var(--currency-color);
 }
+
+.list-group-item {
+    color: initial;
+    background: initial;
+    border: none;
+    border-bottom: 1px var(--currency-color) solid;
+}
+.list-group > .list-group-item:last-of-type {
+    border-bottom: none;
+}
